2012-09-23 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKNotificationCenter.m:
	Deal with clang warning about casting SEL to uintptr_t.

2012-08-22 Niels Grewe <niels.grewe@halbordnung.de>
	* configure.ac: Check for libclang.
	* configure: Regenerate.
	* Documentation/install.texi: Document optional libclang
	requirement.
	* INSTALL: Regenerate
	* Source/config.h.in: Macro for libclang check.
	* Source/DKBoxingUtils.h
	* Source/DKBoxingUtils.m:
	Add D-Bus type derivation based on libclang. Fix potential index out of
	bounds bug in selector name mangling.
	* Source/DKArgument.h
	* Source/DKArgument.m:
	Add methods for generating arguments from CXTypes.
	* Source/DKMethod.h
	* Source/DKMethod.m:
	Add methods for generating methods from CXCursors.
	* Source/DKInterface.h
	* Source/DKInterface.m:
	Add methods for generating interfaces by runtime-inspecting protocols 
	or classes.
	* Source/GNUmakefile: Explicitly link Objective-C and Foundation libs.
	* Tests/TestDKInterface.m:
	Tests for interface generation from introspection data.

	Further work on introspection data generation.

2012-08-18 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKMethod.m:
	Fix typos.

2012-08-17 Niels Grewe <niels.grewe@halbordnung.de>
	* configure.ac: Add a second check for dbus/dbus.h just in case
	that pkg-config returns nonesense.
	* configure: Regenerate
	* Source/DKObjectPathNode.m: Import DKEndpoint header.

	Minor build compatibility tweaks.

2012-08-16 Niels Grewe <niels.grewe@halbordnung.de>
	* configure.ac: Properly set compiler flags for C99 and detect
	the runtime flavour.
	* configure: Regenerate.
	* config.make.in: Add C99 flags when needed.
	* Source/config.h.in: Macros for choosing typed selector
	introspection method.
	* Source/DKProxy.m
	* Source/DKOutgoingProxy.m
	* Source/DKMethod.h
	* Source/DKMethod.m
	* Source/DKObjectPathNode.m:
	GCC compatibility tweaks